	  to support the NXP LPC3131.
	* Add configs/ea3131.  The LPC3131 port for the Embedded Artist EA3131
	  (LPC3131) is code complete and waiting for me to get hardware in
	  hand.
	* arch/arm/src/sam3u, arch/arm/include/sam3u, and configs/sam3u-ek -
	  Added the basic framework needed to begin a port for the SAM3U-EK
	  development board.
	* lib/lib_crc32.c: Add CRC32 logic by Gary S. Brown to lib/.  This is
	  the larger (but faster) table look-up version of the CRC32 algorithm.
	* confgs/ea3131/tools: Added a tool to create a image suitable for
	  use with the LPC313x bootloader.
	* configs/sam3u-3k/ostest - Completed verification of the basic NuttX
	  OS test for the SAM3U.
	* arch/arm/src/common/up_createstack - stack was always been cleared
	  when it was allocated.  This is a good feature for monitoring the 
	  stack during debug, but really hurts thread start-up performance.
	  Clearing is now done if CONFIG_DEBUG=y only.  Changes was only made
	  for arm, but really should be made for all architectures.
	* configs/sam3u/nsh - Added NSH configuration for SAM3U

5.2 2010-03-18 Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/sam3u/sam3u_pio.c - Fix an address calculation error
	  that caused ports B & C to get mapped to the PIOA base address.
	  This is an important bugfix! (a patch is available)
	* arch/arm/src/lpc313x/lpc313x_boot.c - Fix an error in the vector
	  initialization was causing a memory fault.
	* lib/lib_strtod.c - Add strtod()
	* lpc3131/ea3131 - Several bring fixes submitted by David Hewson.  The
	  lpc3131 is almost there!  Thanks David!
	* arch/arm/src/arm/up_head.S - Corrected backward conditional compilation
	  that selects if vectors are located at 0x0000:0000 or 0xffff:f000.
	  This fixes the last show stopper bug in the lpc313x bring-up.
	* configs/ea3131/nsh - Added a NuttShell (NSH) configuration for the
	  EA3131.

5.3 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>